--- a/generic/static/generic/surroundings_style.css
+++ b/generic/static/generic/surroundings_style.css
@@ -52,7 +52,7 @@
 
 /* HEADER PICTURE */
 .pimg {
-  background-image: url(../apartmany/img/gallery.jpg);
+  background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655833802/surroundings/surroundings-header_kb0puh.jpg');
   background-size: cover;
   background-position-y: 50%;
   height: 400px;
