--- a/generic/static/generic/gallery_style.css
+++ b/generic/static/generic/gallery_style.css
@@ -1,6 +1,6 @@
 /* HEADER PICTURE */
 .pimg {
-  background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655835482/gallery/gallery_zfvqne.jpg');
+  background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/w_2600,c_scale/v1655835482/gallery/gallery_zfvqne.jpg');
   background-size: cover;
   background-position-y: 50%;
   height: 400px;
