--- a/generic/static/generic/prices_and_faqs_style.css
+++ b/generic/static/generic/prices_and_faqs_style.css
@@ -1,6 +1,6 @@
 /* HEADER PICTURE */
 .pimg {
-  background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837247/prices_and_faqs/prices_and_faqs_header_j1jsfr.jpg');
+  background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/w_2600,c_scale/v1655837247/prices_and_faqs/prices_and_faqs_header_j1jsfr.jpg');
   background-size: cover;
   background-position-y: 80%;
   height: 400px;
