--- a/generic/templates/generic/surroundings.html
+++ b/generic/templates/generic/surroundings.html
@@ -42,7 +42,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/jasna_zuv1dg.png" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/jasna_zuv1dg.png" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -68,7 +68,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex d-lg-none mb-4 align-items-center">
                 <div class="avatar mx-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/tatralandia_clwqjx.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/tatralandia_clwqjx.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -81,7 +81,7 @@
               </div>
               <div class="col-lg-4 d-none d-lg-flex mb-2 align-items-center">
                 <div class="avatar ml-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/tatralandia_clwqjx.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/tatralandia_clwqjx.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
             </div>
@@ -96,7 +96,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/hurricane_ztt5kh.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/hurricane_ztt5kh.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -119,7 +119,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex d-lg-none mb-4 align-items-center">
                 <div class="avatar mx-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/mikulas_tcgbrl.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/mikulas_tcgbrl.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -132,7 +132,7 @@
               </div>
               <div class="col-lg-4 d-none d-lg-flex mb-2 align-items-center">
                 <div class="avatar ml-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/mikulas_tcgbrl.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/mikulas_tcgbrl.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
             </div>
@@ -147,7 +147,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/slovensky_raj_gtjudt.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/slovensky_raj_gtjudt.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -170,7 +170,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex d-lg-none mb-4 align-items-center">
                 <div class="avatar mx-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/besenova_kumhk9.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/besenova_kumhk9.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -183,7 +183,7 @@
               </div>
               <div class="col-lg-4 d-none d-lg-flex mb-2 align-items-center">
                 <div class="avatar ml-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/besenova_kumhk9.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/besenova_kumhk9.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
             </div>
@@ -198,7 +198,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/jaskyna_bxjkdi.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/jaskyna_bxjkdi.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -221,7 +221,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex d-lg-none mb-4 align-items-center">
                 <div class="avatar mx-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/mara_x4ycbu.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/mara_x4ycbu.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -235,7 +235,7 @@
               </div>
               <div class="col-lg-4 d-none d-lg-flex mb-2 align-items-center">
                 <div class="avatar ml-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832982/surroundings/mara_x4ycbu.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832982/surroundings/mara_x4ycbu.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
             </div>
@@ -250,7 +250,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832984/surroundings/vlkolinec_orggqj.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832984/surroundings/vlkolinec_orggqj.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -273,7 +273,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex d-lg-none mb-4 align-items-center">
                 <div class="avatar mx-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832984/surroundings/bobsleigh_wn0e7t.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832984/surroundings/bobsleigh_wn0e7t.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
@@ -286,7 +286,7 @@
               </div>
               <div class="col-lg-4 d-none d-lg-flex mb-2 align-items-center">
                 <div class="avatar ml-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832984/surroundings/bobsleigh_wn0e7t.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832984/surroundings/bobsleigh_wn0e7t.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
             </div>
@@ -301,7 +301,7 @@
             <div class="row pt-5 pb-5">
               <div class="col-lg-4 d-flex mb-2 align-items-center mb-4 mb-lg-0">
                 <div class="avatar mx-4 ml-lg-0 mr-lg-4 w-100 white d-flex justify-content-center align-items-center">
-                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655832983/surroundings/bike_fn1srd.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
+                  <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655832983/surroundings/bike_fn1srd.jpg" class="rounded-circle img-fluid z-depth-1" alt="woman avatar">
                 </div>
               </div>
               <div class="col-lg-8 d-flex flex-column justify-content-between">
