--- a/generic/static/generic/studios_style.css
+++ b/generic/static/generic/studios_style.css
@@ -140,7 +140,7 @@
 
 /* HEADER PICTURE */
 .pimg {
-  background-image: url("https://res.cloudinary.com/hmzflxvlh/image/upload/v1656264672/studios/studios-header_ujlvv9.jpg");
+  background-image: url("https://res.cloudinary.com/hmzflxvlh/image/upload/w_2600,c_scale/v1656264672/studios/studios-header_ujlvv9.jpg");
   background-size: cover;
   background-position-y: 30%;
   height: 400px;
