--- a/generic/templates/generic/apartments.html
+++ b/generic/templates/generic/apartments.html
@@ -85,7 +85,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837849/apartments/apartment_7/a7_1_lshw4d.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837849/apartments/apartment_7/a7_1_lshw4d.jpg"
                     ,
                     alt="Apartment 7 Picture"
                   />
@@ -94,7 +94,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837849/apartments/apartment_7/a7_{{n}}_lshw4d.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837849/apartments/apartment_7/a7_{{n}}_lshw4d.jpg"
                     ,
                     alt="Apartment 7 Picture"
                   />
@@ -116,7 +116,7 @@
                 <li data-target="#carousel-thumb-7" data-slide-to="0" class="active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837849/apartments/apartment_7/a7_1_lshw4d.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837849/apartments/apartment_7/a7_1_lshw4d.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -124,7 +124,7 @@
                 <li data-target="#carousel-thumb-7" data-slide-to="{{n|add:'-1'}}">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837849/apartments/apartment_7/a7_{{n}}_lshw4d.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837849/apartments/apartment_7/a7_{{n}}_lshw4d.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -219,7 +219,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837862/apartments/apartment_11/a11_1_zyru8r.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837862/apartments/apartment_11/a11_1_zyru8r.jpg"
                     ,
                     alt="First slide"
                   />
@@ -228,7 +228,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837862/apartments/apartment_11/a11_{{n}}_zyru8r.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837862/apartments/apartment_11/a11_{{n}}_zyru8r.jpg"
                     ,
                     alt="First slide"
                   />
@@ -250,7 +250,7 @@
                 <li data-target="#carousel-thumb-11" data-slide-to="0" class="active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837862/apartments/apartment_11/a11_1_zyru8r.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837862/apartments/apartment_11/a11_1_zyru8r.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -258,7 +258,7 @@
                 <li data-target="#carousel-thumb-11" data-slide-to="{{n|add:'-1'}}">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837862/apartments/apartment_11/a11_{{n}}_zyru8r.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837862/apartments/apartment_11/a11_{{n}}_zyru8r.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -353,7 +353,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837889/apartments/apartment_12/a12_1_kknpnz.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837889/apartments/apartment_12/a12_1_kknpnz.jpg"
                     ,
                     alt="First slide"
                   />
@@ -362,7 +362,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837889/apartments/apartment_12/a12_{{n}}_kknpnz.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837889/apartments/apartment_12/a12_{{n}}_kknpnz.jpg"
                     ,
                     alt="First slide"
                   />
@@ -384,7 +384,7 @@
                 <li data-target="#carousel-thumb-12" data-slide-to="0" class="active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837889/apartments/apartment_12/a12_1_kknpnz.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837889/apartments/apartment_12/a12_1_kknpnz.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -392,7 +392,7 @@
                 <li data-target="#carousel-thumb-12" data-slide-to="{{n|add:'-1'}}">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837889/apartments/apartment_12/a12_{{n}}_kknpnz.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837889/apartments/apartment_12/a12_{{n}}_kknpnz.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -487,7 +487,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837909/apartments/apartment_13/a13_1_njf7ip.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837909/apartments/apartment_13/a13_1_njf7ip.jpg"
                     ,
                     alt="First slide"
                   />
@@ -496,7 +496,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837909/apartments/apartment_13/a13_{{n}}_njf7ip.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837909/apartments/apartment_13/a13_{{n}}_njf7ip.jpg"
                     ,
                     alt="First slide"
                   />
@@ -518,7 +518,7 @@
                 <li data-target="#carousel-thumb-13" data-slide-to="0" class="active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837909/apartments/apartment_13/a13_1_njf7ip.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837909/apartments/apartment_13/a13_1_njf7ip.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -526,7 +526,7 @@
                 <li data-target="#carousel-thumb-13" data-slide-to="{{n|add:'-1'}}">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837909/apartments/apartment_13/a13_{{n}}_njf7ip.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837909/apartments/apartment_13/a13_{{n}}_njf7ip.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -621,7 +621,7 @@
                 <div class="carousel-item active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837948/apartments/apartment_14/a14_1_fheubd.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837948/apartments/apartment_14/a14_1_fheubd.jpg"
                     ,
                     alt="First slide"
                   />
@@ -630,7 +630,7 @@
                 <div class="carousel-item">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837948/apartments/apartment_14/a14_{{n}}_fheubd.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837948/apartments/apartment_14/a14_{{n}}_fheubd.jpg"
                     ,
                     alt="First slide"
                   />
@@ -652,7 +652,7 @@
                 <li data-target="#carousel-thumb-14" data-slide-to="0" class="active">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837948/apartments/apartment_14/a14_1_fheubd.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837948/apartments/apartment_14/a14_1_fheubd.jpg"
                     class="img-fluid"
                   />
                 </li>
@@ -660,7 +660,7 @@
                 <li data-target="#carousel-thumb-14" data-slide-to="{{n|add:'-1'}}">
                   <img
                     class="d-block w-100"
-                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837948/apartments/apartment_14/a14_{{n}}_fheubd.jpg"
+                    src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_100,c_scale/v1655837948/apartments/apartment_14/a14_{{n}}_fheubd.jpg"
                     class="img-fluid"
                   />
                 </li>
