--- a/generic/templates/generic/index.html
+++ b/generic/templates/generic/index.html
@@ -26,7 +26,7 @@
         <div class="row video h-100 d-flex justify-content-lg-between justify-content-center">
           <div class="col-12  header-content d-md-inline-flex align-items-center align-self-center">
             <div class="header-image">
-              <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837727/index/trip_rfrfb6.png" alt="Tripadvisor Logo" class="mb-md-0" id="tripadvisor">
+              <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837727/index/trip_rfrfb6.png" alt="Tripadvisor Logo" class="mb-md-0" id="tripadvisor">
             </div>
             <div class="header-text">
                 <h1>{% blocktrans %}Relax in the forrest<br>not the village{% endblocktrans %}</h1>
@@ -88,7 +88,7 @@
         <div class="card why-cards text-center h-100">
           <!-- Card image -->
           <div class="view overlay">
-            <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837724/index/why1_sw9htr.jpg" alt="Sauna">
+            <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837724/index/why1_sw9htr.jpg" alt="Sauna">
             <a>
               <div class="mask rgba-white-slight"></div>
             </a>
@@ -111,7 +111,7 @@
         <div class="card why-cards text-center h-100">
           <!-- Card image -->
           <div class="view overlay">
-            <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837726/index/why2_wwhimb.jpg" alt="Playground">
+            <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837726/index/why2_wwhimb.jpg" alt="Playground">
           </div>
           <!-- Card content -->
           <div class="card-body">
@@ -131,7 +131,7 @@
           <div class="card why-cards text-center h-100">
             <!-- Card image -->
             <div class="view overlay">
-              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837723/index/why3_obiiqh.jpg" alt="Outdoor Facilities">
+              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837723/index/why3_obiiqh.jpg" alt="Outdoor Facilities">
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
@@ -157,7 +157,7 @@
                 <div class="col-12 col-lg-4">
                   <!-- Card image Large-->
                   <div class="view overlay d-none d-lg-block" style="overflow: hidden; height: 100%; width: 100%;">
-                    <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837718/index/why10_zgqxkn.jpg" alt="Sports" style="max-height: 300px; width: auto;">
+                    <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837718/index/why10_zgqxkn.jpg" alt="Sports" style="max-height: 300px; width: auto;">
                     <a>
                       <div class="mask rgba-white-slight"></div>
                     </a>
@@ -165,7 +165,7 @@
 
                   <!-- Card image Until Large-->
                   <div class="view overlay d-block d-lg-none">
-                    <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837718/index/why10_zgqxkn.jpg" alt="Sports">
+                    <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837718/index/why10_zgqxkn.jpg" alt="Sports">
                     <a>
                       <div class="mask rgba-white-slight"></div>
                     </a>
@@ -197,7 +197,7 @@
           <div class="card why-cards text-center h-100">
             <!-- Card image -->
             <div class="view overlay">
-              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837748/index/why4_dlsyll.jpg" alt="Sports">
+              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837748/index/why4_dlsyll.jpg" alt="Sports">
             </div>
             <!-- Card content -->
             <div class="card-body">
@@ -217,7 +217,7 @@
           <div class="card why-cards text-center h-100">
             <!-- Card image -->
             <div class="view overlay">
-              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837752/index/location_mmsv6o.png" alt="Sports">
+              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837752/index/location_mmsv6o.png" alt="Sports">
             </div>
             <!-- Card content -->
             <div class="card-body">
@@ -237,7 +237,7 @@
           <div class="card why-cards text-center h-100">
             <!-- Card image -->
             <div class="view overlay">
-              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837780/index/parking_bj7ai1.jpg" alt="Sports">
+              <img class="card-img-top" src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837780/index/parking_bj7ai1.jpg" alt="Sports">
             </div>
             <!-- Card content -->
             <div class="card-body">
@@ -296,13 +296,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837827/apartments/apartment_7/a7_1_gvi5t3.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837849/apartments/apartment_7/a7_1_lshw4d.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837862/apartments/apartment_11/a11_1_zeufrn.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837862/apartments/apartment_11/a11_1_zyru8r.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837948/apartments/apartment_14/a14_1_wuoaqf.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837948/apartments/apartment_14/a14_1_fheubd.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
@@ -343,13 +343,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837954/studios/studio_1/s1_1_mkpp7x.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837954/studios/studio_1/s1_1_fwkmgq.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837959/studios/studio_2/s2_1_nukxg3.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655837959/studios/studio_2/s2_1_kc54r1.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/v1655838004/studios/studio_6/s6_1_phxlv1.jpg" class="d-block w-100" alt="...">
+                    <img src="https://res.cloudinary.com/hmzflxvlh/image/upload/w_600,c_scale/v1655838004/studios/studio_6/s6_1_phxlv1.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
@@ -412,7 +412,7 @@
     <div class="row mb-5">
       <div class="col-12-xs col-lg-4 mb-4">
         <a class="h-100" href="{% url 'surroundings' %}" style="text-decoration: none;">
-          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837731/index/surrounding1_qquuj3.jpg'); border: 0px;">
+          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837731/index/surrounding1_qquuj3.jpg'); border: 0px;">
             <div class="card-surroundings-overlay d-flex h-100">
               <div class="card-no-surroundings-overlay text-white text-center d-flex align-items-start rgba-black-strong py-5 px-4 h-100">
                 <div>
@@ -431,7 +431,7 @@
       </div>
       <div class="col-12-xs col-lg-4 mb-4">
         <a class="h-100" href="{% url 'surroundings' %}" style="text-decoration: none;">
-          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837731/index/surrounding2_hxuilh.jpg'); border: 0px;">
+          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837731/index/surrounding2_hxuilh.jpg'); border: 0px;">
             <div class="card-surroundings-overlay d-flex align-items-center h-100">
               <div class="card-no-surroundings-overlay text-white text-center d-flex align-items-start rgba-black-strong py-5 px-4 h-100">
                 <div>
@@ -450,7 +450,7 @@
       </div>
       <div class="col-12-xs col-lg-4 mb-4">
         <a class="h-100" href="{% url 'surroundings' %}" style="text-decoration: none;">
-          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/v1655837731/index/surrounding3_gbntkj.jpg'); border: 0px;">
+          <div class="card card-image card-surroundings h-100" style="background-image: url('https://res.cloudinary.com/hmzflxvlh/image/upload/w_500,c_scale/v1655837731/index/surrounding3_gbntkj.jpg'); border: 0px;">
             <div class="card-surroundings-overlay d-flex align-items-center h-100">
               <div class="card-no-surroundings-overlay text-white text-center d-flex align-items-start rgba-black-strong py-5 px-4 h-100">
                 <div>
